# UiTool

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_credentials.py  test_documents.py  test_email_client.py  test_engine.py  test_excel.py  test_hotkeys.py  test_http_client.py  test_models.py  test_orchestrator.py  test_studio_app.py
uiflow/: __init__.py  cli.py  credentials.py  documents.py  email_client.py  engine.py  excel.py  http_client.py  models.py
uiflow/backends/: desktop.py  web.py
uiflow/orchestrator/: db.py  worker.py
uiflow/studio/: app.py  picker.py  recorder.py  schema.py
uiflow/studio/static/: app.js  index.html  login.html  style.css
workflows/: DoubleUI Deposit Demo.yaml  Queue Demo - Deposit pro Betrag.yaml  example_desktop.yaml  example_doubleui.yaml  example_web.yaml
