[project]
name = "uiflow"
version = "0.1.0"
description = "MVP UI automation tool for Windows desktop and web apps (YAML workflows)"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Flask>=3.0",
    "openpyxl>=3.1",
    "playwright>=1.45",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "Pillow>=10.0; platform_system == 'Windows'",
    "pynput>=1.7; platform_system == 'Windows'",
    "requests>=2.31",
    "keyring>=24.0",
    "croniter>=2.0",
    "pypdf>=4.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
uiflow = "uiflow.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["uiflow*"]
